[package]
name = "btcbc-rs"
version = "0.1.0"
authors = ["Sebastian Geisler <sgeisler@wh2.tu-dresden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
reqwest = { version = "0.11.0", features = [ "rustls-tls", "json" ], default-features = false }
structopt = "0.3.21"
tokio = { version = "1.1", features = [ "full" ] }
tokio-tungstenite = "0.13.0"