[package]
name = "btcbc"
version = "0.1.0"
authors = ["Sebastian Geisler <github@gnet.me>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
futures = "0.3.12"
hex = "0.4.2"
nym-websocket = { package = "websocket-requests", git = "https://github.com/nymtech/nym", tag = "v0.9.2" }
nym-addressing = { package = "nymsphinx-addressing", git = "https://github.com/nymtech/nym", tag = "v0.9.2" }
reqwest = { version = "0.11.0", features = [ "rustls-tls", "json" ], default-features = false }
serde = { version = "1.0.123", features = [ "derive" ] }
structopt = "0.3.21"
tokio = { version = "1.1", features = [ "full" ] }
tokio-tungstenite = "0.13.0"
tracing = "0.1.23"
tracing-subscriber = "0.2.15"